force-app/main/default/objects/Procedure__c/Procedure__c.object-meta.xml
<CustomObject>
    <description>This object is used to store the template procedures in the system. These might include lab order, medications, CPT codes, Appointment procedures.</description>
    <label>Procedure Codes</label>
    <nameField>
        <label>Code Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Procedure Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>