force-app/main/default/objects/Procedure__c/fields/Anesthesia_code__c.field-meta.xml
<CustomField>
    <fullName>Anesthesia_code__c</fullName>
    <description>Every procedure should have the Anesthesia code provisioning</description>
    <label>Anesthesia code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100</fullName>
                <label>Salivary grand</label>
            </value>
            <value>
                <fullName>00104</fullName>
                <label>Electric shock</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>