force-app/main/default/objects/Procedure__c/fields/Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whenever it is checked it will be used for Appointment type duration</description>
    <label>Appointment Type</label>
    <type>Checkbox</type>
</CustomField>