force-app/main/default/objects/Procedure__c/fields/Bed_1__c.field-meta.xml
<CustomField>
    <fullName>Bed_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bed</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Bed</value>
        </filterItems>
        <isOptional>true</isOptional> 
    </lookupFilter>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Procedure Codes (Bed)</relationshipLabel>
    <relationshipName>Procedure_Codes1</relationshipName>
    <type>Lookup</type>
</CustomField>