force-app/main/default/objects/Procedure__c/fields/Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable__c</fullName>
    <label>Billable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>