force-app/main/default/objects/Procedure__c/fields/Charges__c.field-meta.xml
<CustomField>
    <fullName>Charges__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Charges ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>