force-app/main/default/objects/Procedure__c/fields/Claim_Generation__c.field-meta.xml
<CustomField>
    <fullName>Claim_Generation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claim Generation</label>
    <type>Checkbox</type>
</CustomField>