force-app/main/default/objects/Procedure__c/fields/Claim_type__c.field-meta.xml
<CustomField>
    <fullName>Claim_type__c</fullName>
    <label>Claim type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Institutional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>