force-app/main/default/objects/Procedure__c/fields/Code_Category__c.field-meta.xml
<CustomField>
    <fullName>Code_Category__c</fullName>
    <label>Code Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ICD -10-PCS</fullName>
            </value>
            <value>
                <fullName>HCPCS Level 1</fullName>
            </value>
            <value>
                <fullName>HCPCS Level 2</fullName>
            </value>
            <value>
                <fullName>Modifier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>