force-app/main/default/objects/Procedure__c/fields/Code_Description__c.field-meta.xml
<CustomField>
    <fullName>Code_Description__c</fullName>
    <label>Code Description</label>
    <type>TextArea</type>
</CustomField>