force-app/main/default/objects/Procedure__c/fields/Consent_code__c.field-meta.xml
<CustomField>
    <fullName>Consent_code__c</fullName>
    <description>Before doing a procedure, one’s consent should be recorded – if not needed also, the provision to record is recommended</description>
    <label>Consent code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Refused To Give</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Legal Guardian Gave Consent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>