force-app/main/default/objects/Procedure__c/fields/Count_of_total_modifiers_used__c.field-meta.xml
<CustomField>
    <fullName>Count_of_total_modifiers_used__c</fullName>
    <label>Count of total modifiers used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>