force-app/main/default/objects/Procedure__c/fields/Days_Units__c.field-meta.xml
<CustomField>
    <fullName>Days_Units__c</fullName>
    <label>Days/Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>