force-app/main/default/objects/Procedure__c/fields/Description_1__c.field-meta.xml
<CustomField>
    <fullName>Description_1__c</fullName>
    <label>Description 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>