force-app/main/default/objects/Procedure__c/fields/Description_2__c.field-meta.xml
<CustomField>
    <fullName>Description_2__c</fullName>
    <label>Description 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>