force-app/main/default/objects/Procedure__c/fields/Description_3__c.field-meta.xml
<CustomField>
    <fullName>Description_3__c</fullName>
    <label>Description 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>