force-app/main/default/objects/Procedure__c/fields/Diagnosis_Pointer__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Pointer__c</fullName>
    <label>Diagnosis Pointer</label>
    <type>TextArea</type>
</CustomField>