force-app/main/default/objects/Procedure__c/fields/Dosage_Type__c.field-meta.xml
<CustomField>
    <fullName>Dosage_Type__c</fullName>
    <description>This is used to store Dosage of inventory type.</description>
    <label>Dosage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tablet</fullName>
            </value>
            <value>
                <fullName>Capsule</fullName>
            </value>
            <value>
                <fullName>Dosage Form</fullName>
            </value>
            <value>
                <fullName>Film</fullName>
            </value>
            <value>
                <fullName>Lab</fullName>
            </value>
            <value>
                <fullName>Liguid</fullName>
            </value>
            <value>
                <fullName>Liquid</fullName>
            </value>
            <value>
                <fullName>Packet</fullName>
            </value>
            <value>
                <fullName>Patch</fullName>
            </value>
            <value>
                <fullName>Patch Weekly</fullName>
            </value>
            <value>
                <fullName>Solution</fullName>
            </value>
            <value>
                <fullName>Solution Aunt-Injector</fullName>
            </value>
            <value>
                <fullName>Suspension</fullName>
            </value>
            <value>
                <fullName>Suspension Rec</fullName>
            </value>
            <value>
                <fullName>Tablet Chewable</fullName>
            </value>
            <value>
                <fullName>Tablet Delayed Release</fullName>
            </value>
            <value>
                <fullName>Tablet Dispersible</fullName>
            </value>
            <value>
                <fullName>Tablet Extended Release 12h</fullName>
            </value>
            <value>
                <fullName>Tablet Sublingual</fullName>
            </value>
            <value>
                <fullName>Tablet Therapy</fullName>
            </value>
            <value>
                <fullName>Tablet Therapy Pack</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>