force-app/main/default/objects/Procedure__c/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <description>Store Id of related Event</description>
    <label>Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>