force-app/main/default/objects/Procedure__c/fields/Facility_1__c.field-meta.xml
<CustomField>
    <fullName>Facility_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Suite</value> 
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Procedure Codes (Facility)</relationshipLabel>
    <relationshipName>Procedure_Codes2</relationshipName>
    <type>Lookup</type>
</CustomField>