force-app/main/default/objects/Procedure__c/fields/From_Date_of_Service__c.field-meta.xml
<CustomField>
    <fullName>From_Date_of_Service__c</fullName>
    <label>From Date of Service</label>
    <type>DateTime</type>
</CustomField>