force-app/main/default/objects/Procedure__c/fields/Generate_Claim__c.field-meta.xml
<CustomField>
    <fullName>Generate_Claim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Claim</label>
    <type>Checkbox</type>
</CustomField>