force-app/main/default/objects/Procedure__c/fields/ICD_Codes__c.field-meta.xml
<CustomField>
    <fullName>ICD_Codes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ICD Codes</label>
    <referenceTo>ICD_Codes__c</referenceTo>
    <relationshipName>Procedures</relationshipName>
    <type>Lookup</type>
</CustomField>