force-app/main/default/objects/Procedure__c/fields/ID_Qualifier__c.field-meta.xml
<CustomField>
    <fullName>ID_Qualifier__c</fullName>
    <label>ID Qualifier</label>
    <type>TextArea</type>
</CustomField>