force-app/main/default/objects/Procedure__c/fields/Is_Billed__c.field-meta.xml
<CustomField>
    <fullName>Is_Billed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Billed</label>
    <type>Checkbox</type>
</CustomField>