force-app/main/default/objects/Procedure__c/fields/Is_Patient_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Is_Patient_Procedure__c</fullName>
    <formula>IF( RecordType.Name = &apos;Patient Procedure&apos;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Procedure</label>
    <type>Checkbox</type>
</CustomField>