force-app/main/default/objects/Procedure__c/fields/IsUpdatedFromFlow__c.field-meta.xml
<CustomField>
    <fullName>IsUpdatedFromFlow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsUpdatedFromFlow</label>
    <type>Checkbox</type>
</CustomField>