force-app/main/default/objects/Procedure__c/fields/Item_type__c.field-meta.xml
<CustomField>
    <fullName>Item_type__c</fullName>
    <label>Item type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Procedure</fullName>
            </value>
            <value>
                <fullName>Inventory</fullName>
            </value>
            <value>
                <fullName>Medication</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>