force-app/main/default/objects/Procedure__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Procedure Codes (Location)</relationshipLabel>
    <relationshipName>Procedure_Codes3</relationshipName>
    <type>Lookup</type>
</CustomField>