force-app/main/default/objects/Procedure__c/fields/Medication_Type__c.field-meta.xml
<CustomField>
    <fullName>Medication_Type__c</fullName>
    <description>This is used to store medication of inventory type.</description>
    <label>Medication Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Antibiotic</fullName>
            </value>
            <value>
                <fullName>Anti-histamine</fullName>
            </value>
            <value>
                <fullName>Anti-hypertensive</fullName>
            </value>
            <value>
                <fullName>Electrolyte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>