force-app/main/default/objects/Procedure__c/fields/Modifier1__c.field-meta.xml
<CustomField>
    <fullName>Modifier1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modifier 1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Procedure__c.Code_Category__c</field>
            <operation>equals</operation>
            <value>Modifier</value>
        </filterItems>
        <filterItems>
            <field>Procedure__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Template Procedure</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Procedure__c</referenceTo>
    <relationshipLabel>Procedure Codes</relationshipLabel>
    <relationshipName>Procedure_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>