force-app/main/default/objects/Procedure__c/fields/modifier_1__c.field-meta.xml
<CustomField>
    <fullName>modifier_1__c</fullName>
    <label>modifier 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>