force-app/main/default/objects/Procedure__c/fields/modifier_2__c.field-meta.xml
<CustomField>
    <fullName>modifier_2__c</fullName>
    <label>modifier 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>