force-app/main/default/objects/Procedure__c/fields/modifier_3__c.field-meta.xml
<CustomField>
    <fullName>modifier_3__c</fullName>
    <label>modifier 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>