force-app/main/default/objects/Procedure__c/fields/Notes_1__c.field-meta.xml
<CustomField>
    <fullName>Notes_1__c</fullName>
    <label>Notes 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>