force-app/main/default/objects/Procedure__c/fields/Notes_2__c.field-meta.xml
<CustomField>
    <fullName>Notes_2__c</fullName>
    <label>Notes 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>