force-app/main/default/objects/Procedure__c/fields/Notes_3__c.field-meta.xml
<CustomField>
    <fullName>Notes_3__c</fullName>
    <label>Notes 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>