force-app/main/default/objects/Procedure__c/fields/Parent_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Parent_Procedure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>There can be a fallout procedure (or a supplement) which can be linked to the parent procedure</description>
    <label>Parent Procedure</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Patient Procedure</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Procedure__c</referenceTo>
    <relationshipLabel>Procedure Codes (Parent Procedure)</relationshipLabel>
    <relationshipName>Procedure_Codes4</relationshipName>
    <type>Lookup</type>
</CustomField>