force-app/main/default/objects/Procedure__c/fields/Payor__c.field-meta.xml
<CustomField>
    <fullName>Payor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payer</label>
    <referenceTo>Payor__c</referenceTo>
    <relationshipLabel>Procedure Codes</relationshipLabel>
    <relationshipName>Procedure_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>