force-app/main/default/objects/Procedure__c/fields/Place_of_Service_Code__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Service_Code__c</fullName>
    <label>Place of Service Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>