force-app/main/default/objects/Procedure__c/fields/Place_Of_Service_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Place_Of_Service_Picklist__c</fullName>
    <label>Place Of Service (Picklist)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 - Pharmacy</fullName>
            </value>
            <value>
                <fullName>02 - Telehealth</fullName>
            </value>
            <value>
                <fullName>35-40 - Unassigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>