force-app/main/default/objects/Procedure__c/fields/Pre_auth_Code__c.field-meta.xml
<CustomField>
    <fullName>Pre_auth_Code__c</fullName>
    <label>Pre-auth Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>