force-app/main/default/objects/Procedure__c/fields/Procedure_Duration__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Duration__c</fullName>
    <label>Procedure Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>