force-app/main/default/objects/Procedure__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rendering Provider</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Provider__c.Account__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Provider__c</referenceTo>
    <relationshipName>Procedures</relationshipName>
    <type>Lookup</type>
</CustomField>