force-app/main/default/objects/Procedure__c/fields/Provider_Location__c.field-meta.xml
<CustomField>
    <fullName>Provider_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Provider__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Template_Provider</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Provider__c</referenceTo>
    <relationshipLabel>Procedure Codes (Provider Location)</relationshipLabel>
    <relationshipName>Procedure_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>