force-app/main/default/objects/Procedure__c/fields/Ready_for_Billing__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Ready for Billing</label>
    <type>Checkbox</type>
</CustomField>