force-app/main/default/objects/Procedure__c/fields/Ready_for_Claim_Processing__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Claim_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for Claim Processing</label>
    <type>Checkbox</type>
</CustomField>