force-app/main/default/objects/Procedure__c/fields/Reference_CPT_Code__c.field-meta.xml
<CustomField>
    <fullName>Reference_CPT_Code__c</fullName>
    <inlineHelpText>For template procedures without modifiers, the Reference CPT code is same as the code label</inlineHelpText>
    <label>Reference CPT Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>