force-app/main/default/objects/Procedure__c/fields/Rendering_Provider_Non_NPI__c.field-meta.xml
<CustomField>
    <fullName>Rendering_Provider_Non_NPI__c</fullName>
    <label>Rendering Provider (Non NPI)</label>
    <length>11</length>
    <type>Text</type>
</CustomField>