force-app/main/default/objects/Procedure__c/fields/Rendering_Provider_NPI__c.field-meta.xml
<CustomField>
    <fullName>Rendering_Provider_NPI__c</fullName>
    <label>Rendering Provider (NPI)</label>
    <type>TextArea</type>
</CustomField>