force-app/main/default/objects/Procedure__c/fields/Reservation_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reservation Line Item</label>
    <referenceTo>Reservation_Line_Item__c</referenceTo>
    <relationshipLabel>Procedure</relationshipLabel>
    <relationshipName>Procedure_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>