force-app/main/default/objects/Procedure__c/fields/Room_1__c.field-meta.xml
<CustomField>
    <fullName>Room_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Room</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Room</value>
        </filterItems> 
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Procedure Codes</relationshipLabel>
    <relationshipName>Procedure_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>