force-app/main/default/objects/Procedure__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <label>Route</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buccal</fullName>
            </value>
            <value>
                <fullName>Nasal</fullName>
            </value>
            <value>
                <fullName>Oral</fullName>
            </value>
            <value>
                <fullName>IM</fullName>
            </value>
            <value>
                <fullName>IM,Lab</fullName>
            </value>
            <value>
                <fullName>Injection</fullName>
            </value>
            <value>
                <fullName>Instramuscular</fullName>
            </value>
            <value>
                <fullName>Intramuscular</fullName>
            </value>
            <value>
                <fullName>Lab</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>PO</fullName>
            </value>
            <value>
                <fullName>SL</fullName>
            </value>
            <value>
                <fullName>Sublingual</fullName>
            </value>
            <value>
                <fullName>Transdermal</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>