force-app/main/default/objects/Procedure__c/fields/Sub_type__c.field-meta.xml
<CustomField>
    <fullName>Sub_type__c</fullName>
    <label>Sub type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Item_type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Utility</fullName>
            </value>
            <value>
                <fullName>Medicine</fullName>
            </value>
            <value>
                <fullName>Main</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>