force-app/main/default/objects/Procedure__c/fields/Surgeon__c.field-meta.xml
<CustomField>
    <fullName>Surgeon__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Surgeon / Doctor who is doing the procedure</description>
    <label>Rendering Practitioner</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Practitioner</value>
        </filterItems>
        <filterItems>
            <field>Contact.Elixir_Contact_Type__c</field>
            <operation>equals</operation>
            <value>Elixir_Practitioner_Contact</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Procedure Codes</relationshipLabel>
    <relationshipName>Procedure_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>