force-app/main/default/objects/Procedure__c/fields/Template_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Template_Procedure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template Procedure</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Procedure__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Template_Procedure</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Procedure__c</referenceTo>
    <relationshipLabel>Procedure Codes (Template Procedure)</relationshipLabel>
    <relationshipName>Procedure_Codes5</relationshipName>
    <type>Lookup</type>
</CustomField>