force-app/main/default/objects/Procedure__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup field is used to select a single test from those available in the Test object.</description>
    <label>Test</label>
    <referenceTo>Test__c</referenceTo>
    <relationshipLabel>Procedure Codes</relationshipLabel>
    <relationshipName>Procedure_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>