force-app/main/default/objects/Procedure__c/fields/Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent__c</fullName>
    <formula>IF(End_Time__c &lt; Start_Time__c, 0, (End_Time__c - Start_Time__c)*24*60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Spent (In minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>