force-app/main/default/objects/Procedure__c/fields/To_Date__c.field-meta.xml
<CustomField>
    <fullName>To_Date__c</fullName>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>