force-app/main/default/objects/Procedure__c/fields/To_Date_of_Service__c.field-meta.xml
<CustomField>
    <fullName>To_Date_of_Service__c</fullName>
    <label>To Date of Service</label>
    <type>DateTime</type>
</CustomField>