force-app/main/default/objects/Procedure__c/fields/Type_of_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Procedure__c</fullName>
    <label>Type of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Private Payment</fullName>
            </value>
            <value>
                <fullName>Insurance Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>